Upgrade to playn 1.6 SNAPSHOT

--- a/game/html/.project
+++ b/game/html/.project
@@ -3,6 +3,9 @@
 	<name>game-html</name>
 	<comment></comment>
 	<projects>
+		<project>game-core</project>
+		<project>playn-core</project>
+		<project>playn-html</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
