Set context root for web app in Eclipse

--- a/html/pom.xml
+++ b/html/pom.xml
@@ -15,6 +15,7 @@
 	<properties>
 		<gwt.module>com.cohesiva.rpg.game.RpgClient</gwt.module>
 		<gwt.name>game</gwt.name>
+		<m2eclipse.wtp.contextRoot>/</m2eclipse.wtp.contextRoot>
 	</properties>
 
 	<dependencies>
